# scrapy-settings-log

./: .bumpversion.cfg  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
scrapy_settings_log/: __init__.py  scrapy_settings_log.py
src/scrapy_settings_log/: __init__.py
tests/: test_code.py  test_process_values.py
