[metadata]
name=scrapy-settings-log
version=1.3.3
author=Roy Healy
author_email=roy.healy87@gmail.com
description=An extension that allows a user to display all or some of their scrapy spider settings at runtime.
long_description=file: README.md, LICENSE.txt
long_description_content_type=text/markdown
url=https://github.com/scrapy-plugins/scrapy-settings-log
project_urls =
    repository = https://github.com/scrapy-plugins/scrapy-settings-log
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    scrapy

[options.packages.find]
where = src
